kubernetes/istio/wrk2.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrk2
  namespace: f5-waf
  labels:
    app: wrk2
    service: wrk2
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: wrk2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrk2
  namespace: f5-waf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wrk2
  template:
    metadata:
      labels:
        app: wrk2
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: curl
      containers:
      - name: wrk2
        image: cylab/wrk2
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
---
